--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -30,10 +30,10 @@
                        ng-pattern="/^[a-zA-Z]+$/">
 
                 <div class="errorBoxTab">
-                    <span class="errorTipTab" ng-show="userProfile.name == '' || (UserNameForm.firstname.$dirty && UserNameForm.firstname.$error.required)">Necessario!</span>
-                    <span class="errorTipTab" ng-show="UserNameForm.firstname.$error.pattern">Simbolo non permesso.</span>
-                    <span class="errorTipTab" ng-show="UserNameForm.firstname.$error.minlength">Minimo 2 caratteri.</span>
-                    <span class="errorTipTab" ng-show="UserNameForm.firstname.$error.maxlength">Massimo 20 caratteri.</span>
+                  <span class="errorTipTab" ng-show="userProfile.name == '' || (UserNameForm.firstname.$dirty && UserNameForm.firstname.$error.required)">Necessario!</span>
+                  <span class="errorTipTab" ng-show="UserNameForm.firstname.$error.pattern">Simbolo non permesso.</span>
+                  <span class="errorTipTab" ng-show="UserNameForm.firstname.$error.minlength">Minimo 2 caratteri.</span>
+                  <span class="errorTipTab" ng-show="UserNameForm.firstname.$error.maxlength">Massimo 20 caratteri.</span>
                 </div>
               </div>
             </form>
@@ -51,92 +51,84 @@
                        ng-pattern="/^[a-zA-Z]+$/">
 
                 <div class="errorBoxTab">
-                    <span class="errorTipTab" ng-show="userProfile.last_name == '' || (UserLastNameForm.lastname.$dirty && UserNameForm.lastname.$error.required)">Necessario!</span>
-                    <span class="errorTipTab" ng-show="UserLastNameForm.lastname.$error.pattern">Simbolo non permesso.</span>
-                    <span class="errorTipTab" ng-show="UserLastNameForm.lastname.$error.minlength">Minimo 2 caratteri.</span>
-                    <span class="errorTipTab" ng-show="UserLastNameForm.lastname.$error.maxlength">Massimo 20 caratteri.</span>
+                  <span class="errorTipTab" ng-show="userProfile.last_name == '' || (UserLastNameForm.lastname.$dirty && UserNameForm.lastname.$error.required)">Necessario!</span>
+                  <span class="errorTipTab" ng-show="UserLastNameForm.lastname.$error.pattern">Simbolo non permesso.</span>
+                  <span class="errorTipTab" ng-show="UserLastNameForm.lastname.$error.minlength">Minimo 2 caratteri.</span>
+                  <span class="errorTipTab" ng-show="UserLastNameForm.lastname.$error.maxlength">Massimo 20 caratteri.</span>
                 </div>
               </div>
             </form>
 
 						<!-- User Email -->
- 						<form name="UserEmail" novalidate="" class="singleForm">
-                <div>
-                    <label class="userLabel">E-mail: </label>
-                    <input id="userProfileEmail" class="userForm" type="text"
-                           name="userEmail"
-                           ng-model="userProfile.email" required
-                           ui-Blur="updateUserProfileEmail()"
-                           ng-maxlength="255"
-                           ng-pattern="/^[a-zA-Z0-9@.]+$/">
+ 						<form name="UserEmailForm" novalidate="" class="singleForm">
+              <div>
+                <label class="userLabel">E-mail: </label>
+                <input id="userProfileEmail" class="userForm" type="email"
+                       name="userEmail"
+                       ng-model="userProfile.email" required
+                       ui-Blur="updateUserProfileEmail()"
+                       ng-maxlength="255">
 
-                    <div class="errorBoxTab">
-                        <span class="errorTipTab"
-                              ng-show="(learningDesign.email == '') || (userprofile.email.$dirty && userProfile.email.$error.required)">Necessario!</span>
-                        <span class="errorTipTab" ng-show="userProfile.email.$error.pattern">Simbolo non permesso.</span>
-                        <span class="errorTipTab" ng-show="userProfile.email.$error.maxlength">Massimo 50 caratteri .</span>
-                    </div>
+                <div class="errorBoxTab">
+                  <span class="errorTipTab" ng-show="userProfile.email == '' || (UserEmailForm.userEmail.$dirty && UserEmailForm.userEmail.$error.required)">Necessario!</span>
+                  <span class="errorTipTab" ng-show="UserEmailForm.userEmail.$error.email">Per favore, inserisci un email valido.</span>
+                  <span class="errorTipTab" ng-show="UserEmailForm.userEmail.$error.maxlength">Massimo 255 caratteri.</span>
                 </div>
+              </div>
             </form>
 
 						<!-- User Workplace -->
-        		<form name="UserWorkplace" novalidate="" class="singleForm">
-                <div>
-                    <label class="userLabel">Luogo di lavoro: </label>
-                    <input id="userProfileWorkplace" class="userForm" type="text"
-                           name="userWorkplace"
-                           ng-model="userProfile.workplace"
-                           ui-Blur="updateUserProfileWorkplace()"
-                           ng-maxlength="50"
-                           ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
+        		<form name="UserWorkplaceForm" novalidate="" class="singleForm">
+              <div>
+                <label class="userLabel">Luogo di lavoro: </label>
+                <input id="userProfileWorkplace" class="userForm" type="text"
+                       name="userWorkplace"
+                       ng-model="userProfile.workplace"
+                       ui-Blur="updateUserProfileWorkplace()"
+                       ng-maxlength="50"
+                       ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
 
-                    <div class="errorBoxTab">
-                        <span class="errorTipTab"
-                              ng-show="(userProfile.workplace == '') || (userProfile.workplace.$dirty && userProfile.workplace.$error.required)">Necessario!</span>
-                        <span class="errorTipTab" ng-show="userProfile.workplace.$error.pattern">Simbolo non permesso.</span>
-                        <span class="errorTipTab" ng-show="userProfile.workplace.$error.maxlength">Massimo 50 caratteri .</span>
-                    </div>
+                <div class="errorBoxTab">
+                  <span class="errorTipTab" ng-show="UserWorkplaceForm.userWorkplace.$error.pattern">Simbolo non permesso.</span>
+                  <span class="errorTipTab" ng-show="UserWorkplaceForm.userWorkplace.$error.maxlength">Massimo 50 caratteri.</span>
                 </div>
+              </div>
             </form>
 	
 						<!-- User City -->
-            <form name="City" novalidate="" class="singleForm">
-                <div>
-                    <label class="userLabel">Citt&agrave;: </label>
-                    <input id="userProfileCity" class="userForm" type="text"
-                           name="city"
-                           ng-model="userProfile.city"
-                           ui-Blur="updateUserProfileCity()"
-                           ng-maxlength="50"
-                           ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
+            <form name="CityForm" novalidate="" class="singleForm">
+              <div>
+                <label class="userLabel">Citt&agrave;: </label>
+                <input id="userProfileCity" class="userForm" type="text"
+                       name="city"
+                       ng-model="userProfile.city"
+                       ui-Blur="updateUserProfileCity()"
+                       ng-maxlength="50"
+                       ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
 
-                    <div class="errorBoxTab">
-                        <span class="errorTipTab"
-                              ng-show="(userProfile.city == '') || (userProfile.city.$dirty && userProfile.city.$error.required)">Necessario!</span>
-                        <span class="errorTipTab" ng-show="userProfile.city.$error.pattern">Simbolo non permesso.</span>
-                        <span class="errorTipTab" ng-show="userProfile.city.$error.maxlength">Massimo 50 caratteri .</span>
-                    </div>
+                <div class="errorBoxTab">
+                  <span class="errorTipTab" ng-show="CityForm.city.$error.pattern">Simbolo non permesso.</span>
+                  <span class="errorTipTab" ng-show="CityForm.city.$error.maxlength">Massimo 50 caratteri.</span>
                 </div>
+              </div>
             </form>
 
 						<!-- User Country -->
-            <form name="Country" novalidate="" class="singleForm">
-                <div>
-                    <label class="userLabel">Paese: </label>
-                    <input id="userProfileCountry" class="userForm" type="text"
-                           name="country"
-                           ng-model="userProfile.country"
-                           ui-Blur="updateUserProfileCountry()"
-                           ng-maxlength="50"
-                           ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
+            <form name="CountryForm" novalidate="" class="singleForm">
+              <div>
+                <label class="userLabel">Paese: </label>
+                <input id="userProfileCountry" class="userForm" type="text"
+                       name="country"
+                       ng-model="userProfile.country"
+                       ui-Blur="updateUserProfileCountry()"
+                       ng-maxlength="50"
+                       ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
 
-                    <div class="errorBoxTab">
-                        <span class="errorTipTab"
-                              ng-show="(userProfile.country == '') || (userProfile.country.$dirty && userProfile.country.$error.required)">Necessario!</span>
-                        <span class="errorTipTab" ng-show="userProfile.country.$error.pattern">Simbolo non permesso.</span>
-                        <span class="errorTipTab" ng-show="userProfile.country.$error.maxlength">Massimo 50 caratteri .</span>
-                    </div>
+                <div class="errorBoxTab">
+                  <span class="errorTipTab" ng-show="CountryForm.country.$error.pattern">Simbolo non permesso.</span>
+                  <span class="errorTipTab" ng-show="CountryForm.country.$error.maxlength">Massimo 50 caratteri.</span>
                 </div>
+              </div>
             </form>
         </div>
 </div>
