#48 client side file upload

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -296,7 +296,9 @@
 
 <!-- Vendor Lib: For development use locally hosted versions so it can work even when not wifi connected -->
 <script src="/js/lib/underscore-min.js"></script>
+<script src="/js/lib/angular-file-upload-shim.js"></script>
 <script src="/js/lib/angular/angular.min.js"></script>
+<script src="/js/lib/angular-file-upload.js"></script>
 <script src="/js/lib/angular/angular-cookies.js"></script>
 
 <!-- For production, use cdn -->
