--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -4,6 +4,7 @@
         <div class="span3  centered top-margin ">
             <!-- FIXME: GET REAL PICTURE FROM DB -->
             <img ng-src="../img/pics/user{{ userProfile.image_id }}.png" class="user-pic-big">
+            <input type="file" ng-file-select="onFileSelect($files)" >
             <div>
                 <a ng-href="/userlds/{{userProfile.id}}">
                     <h4 class="userDesignsButton">I miei progetti</h4>
