--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -2,13 +2,13 @@
     <div class="row-fluid">
 
         <div class="span3  centered top-margin ">
-            <!-- #48 TODO use profile image uri -->
-            <img ng-src="../img/pics/user{{ userProfile.image_id }}.png" class="user-pic-big">
+            <!-- #48 FIXME show default user image if have no profile image -->
+            <img ng-src="{{userProfile.image_uri}}" class="user-pic-big">
 
             <!-- #48 TEST -->
-            <div ng-show="userImageUri">
+            <!-- <div ng-show="userImageUri">
             	<img ng-src="{{userImageUri}}" class="user-pic-big"/>
-            </div>
+            </div> -->
 
             <input type="file" ng-file-select="onFileSelect($files)" >
             <div>
