#48 enhance e2e to verify default vs profile avatar image

--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -2,20 +2,19 @@
     <div class="row-fluid">
 
         <div class="span3  centered top-margin ">
-            
-            <div ng-show="userProfile.image_uri">
-            	<img id="userProfileImage" ng-src="{{userProfile.image_uri}}" alt="User Profile Image" class="user-pic-big">
-          	</div>
-          	<div ng-show="!userProfile.image_uri">
-          		<img id="userProfileDefaultImage" ng-src="/img/pics/user.png" alt="User Default Profile Image" class="user-pic-big">
-          	</div>
 
+						<!-- Avatar -->            
+            <img id="userProfileImage" ng-show="userProfile.image_uri" ng-src="{{userProfile.image_uri}}" alt="User Profile Image" class="user-pic-big">
+          	<img id="userProfileDefaultImage" ng-show="!userProfile.image_uri" ng-src="/img/pics/user.png" alt="User Default Profile Image" class="user-pic-big">
             <input type="file" ng-file-select="onFileSelect($files)" >
+
+						<!-- My Projects -->
             <div>
                 <a ng-href="/userlds/{{userProfile.id}}">
                     <h4 class="userDesignsButton">I miei progetti</h4>
                 </a>
             </div>
+
         </div>
         <div class="span1"></div>
         <div class="span8 top-margin userData">
