#48 display user avatar in top nav

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -80,7 +80,11 @@
                         <a id="userActionsMenu" href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <li class="dropdown">
                             <li id="loggedInUserName" class="nav-username">{{ user.name }} {{ user.last_name }}</li>
-                            <img ng-src="/img/pics/user.png" alt="User Avatar" class="img-rounded user-pic"/>
+                            
+                            <!-- User Avatar -->
+                            <img id="userAvatarImage" ng-show="user.image_uri" ng-src="{{user.image_uri}}" alt="User Avatar" class="img-rounded user-pic"/>
+                            <img id-"defaultAvatarImage" ng-show="!user.image_uri" ng-src="/img/pics/user.png" alt="User Avatar" class="img-rounded user-pic"/>
+
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
