--- a/client/views/index.html
+++ b/client/views/index.html
@@ -83,7 +83,7 @@
                             
                             <!-- User Avatar -->
                             <img id="userAvatarImage" ng-show="user.image_uri" ng-src="{{user.image_uri}}" alt="User Avatar" class="img-rounded user-pic"/>
-                            <img id-"defaultAvatarImage" ng-show="!user.image_uri" ng-src="/img/pics/user.png" alt="User Avatar" class="img-rounded user-pic"/>
+                            <img id="defaultAvatarImage" ng-show="!user.image_uri" ng-src="/img/pics/user.png" alt="User Avatar" class="img-rounded user-pic"/>
 
                             <b class="caret"></b>
                         </a>
