#48 fix avatar path so it will not be relative, otherwise broken image on many paths

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -82,7 +82,7 @@
                             <li id="loggedInUserName" class="nav-username">{{ user.name }} {{ user.last_name }}</li>
                             
                             <!-- User Avatar -->
-                            <img id="userAvatarImage" ng-show="user.image_uri" ng-src="{{user.image_uri}}" alt="User Avatar" class="img-rounded user-pic"/>
+                            <img id="userAvatarImage" ng-show="user.image_uri" ng-src="/{{user.image_uri}}" alt="User Avatar" class="img-rounded user-pic"/>
                             <img id="defaultAvatarImage" ng-show="!user.image_uri" ng-src="/img/pics/user.png" alt="User Avatar" class="img-rounded user-pic"/>
 
                             <b class="caret"></b>
