#52 hooking up server and client side

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -331,6 +331,8 @@
 <script src="/js/activity/ActivityService.js"></script>
 <script src="/js/user/UserProfileEditService.js"></script>
 <script src="/js/user/UserProfileEditController.js"></script>
+<script src="/js/userprojects/UserProjectsController.js"></script>
+<script src="/js/userprojects/UserProjectsService.js"></script>
 <script src="/js/user/UserController.js"></script>
 <script src="/js/user/UserService.js"></script>
 
