--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -6,9 +6,12 @@
 						<!-- Avatar -->            
             <img id="userProfileImage" ng-show="userProfile.image_uri" ng-src="/{{userProfile.image_uri}}" alt="User Profile Image" class="user-pic-big">
           	<img id="userProfileDefaultImage" ng-show="!userProfile.image_uri" ng-src="/img/pics/user.png" alt="User Default Profile Image" class="user-pic-big">
-            <input type="file" ng-file-select="onFileSelect($files)" >
 
-						<!-- My Projects -->
+            <div class="js-fileapi-wrapper upload-btn">
+                <div class="upload-btn__txt">Carica foto</div>
+                <input name="files" type="file" ng-file-select="onFileSelect($files)"  />
+            </div>
+        							<!-- My Projects -->
             <div>
                 <a ng-href="/userlds/{{userProfile.id}}">
                     <h4 class="userDesignsButton">I miei progetti</h4>
