--- a/client/views/partials/ld.html
+++ b/client/views/partials/ld.html
@@ -82,9 +82,10 @@
         </div>
         -->
         <!-- FIXME: Only show the edit link when user is owner of current LD -->
-        <div>
+        <div ng-show="user.name == learningDesign.user_name">
           <a id="editLdLink" ng-href="/ldedit/{{learningDesign.ld_id}}">
-            <h4 class="editingMode">Modifica questo progetto </h4>
+
+              <h4 class="editingMode">Modifica questo progetto </h4>
           </a>
         </div>
 
