changing link for #51.

--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -13,7 +13,7 @@
             </div>
         							<!-- My Projects -->
             <div>
-                <a ng-href="/userlds/{{userProfile.id}}">
+                <a ng-href="/userlds">
                     <h4 class="userDesignsButton">I miei progetti</h4>
                 </a>
             </div>
