correcting expression to show edit LD button for #53

--- a/client/views/partials/ld.html
+++ b/client/views/partials/ld.html
@@ -82,7 +82,7 @@
         </div>
         -->
         <!-- FIXME: Only show the edit link when user is owner of current LD -->
-        <div ng-show="user.name == learningDesign.user_name">
+        <div ng-show="user.id == learningDesign.user_id">
           <a id="editLdLink" ng-href="/ldedit/{{learningDesign.ld_id}}">
               <h4 class="editingMode">Modifica questo progetto </h4>
           </a>
