#51 hook up client

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -332,6 +332,7 @@
 <script src="/js/user/UserProfileEditService.js"></script>
 <script src="/js/user/UserProfileEditController.js"></script>
 <script src="/js/userprojects/UserProjectsController.js"></script>
+<script src="/js/userprojects/MyProjectsController.js"></script>
 <script src="/js/userprojects/UserProjectsService.js"></script>
 <script src="/js/user/UserController.js"></script>
 <script src="/js/user/UserService.js"></script>
