--- a/client/views/partials/userlds.html
+++ b/client/views/partials/userlds.html
@@ -19,7 +19,7 @@
                             <p><a href="" ng-click="predicate = 'ld_name'; reverse=!reverse" class="whiteText">Nome del progetto <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                         </div>
                         <div class="colTable colLD2">
-                            <p><a href="" ng-click="predicate = 'qcers[0].qcer_name'; reverse=!reverse" class="whiteText">Livelli QCER <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                            <p><a href="" ng-click="predicate = 'ld_qcers'; reverse=!reverse" class="whiteText">Livelli QCER <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                         </div>
                         <div class="colTable colLD3">
                             <p><a href="" ng-click="predicate = 'ld_scope'; reverse=!reverse" class="whiteText">Ambito <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
@@ -32,24 +32,23 @@
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                    <div class="rowTable" ng-repeat="learningDesign in learningDesigns | filter:search | filter:user.name:learningDesign.user_name | orderBy:predicate:reverse">
+                    <div class="rowTable" ng-repeat="project in myProjects | filter:search | orderBy:predicate:reverse">
                         <div class="rowUserLink">
-                            <a ng-href="/ld/{{ learningDesign.ld_id }}">
+                            <a ng-href="/ld/{{ project.ld_id }}">
                                 <div class="colTable colLD1">
-                                    <p>{{ learningDesign.ld_name }}</p>
+                                    <p>{{ project.ld_name }}</p>
                                 </div>
                                 <div class="colTable colLD2">
-                                    <p ng-repeat="qcer in learningDesign.qcers" class="qcerList">{{ qcer.qcer_name }}</p> <p ng-show="!learningDesign.qcers">Non definito </p>
-
+                                    <p class="qcerList">{{ project.ld_qcers }}</p>
                                 </div>
                                 <div class="colTable colLD3">
-                                    <p>{{ learningDesign.ld_scope }}</p>
+                                    <p>{{ project.ld_scope }}</p>
                                 </div>
                                 <div class="colTable colLD4">
-                                    <p>{{ learningDesign.ld_publication }}  </p>
+                                    <p>{{ project.ld_publication }}  </p>
                                 </div>
                                 <div class="colTable colLD5">
-                                    <p>{{ learningDesign.ld_creation_date | date:'d-M-yyyy' }} </p>
+                                    <p>{{ project.ld_creation_date | date:'d-M-yyyy' }} </p>
 
                                 </div>
                             </a>
