#51 client side unit and e2e tests

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -89,7 +89,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a id="myProfileLink" href="/useredit"><i class="icon-cog"></i> Il mio profilo</a></li>
-                            <li><a href="/userlds"><i class="icon-pencil"></i> I miei progetti</a></li>
+                            <li><a id="myProjectsLink" href="/userlds"><i class="icon-pencil"></i> I miei progetti</a></li>
                             <li class="divider"></li>
                             <li><a id="logoutLink" ng-click="logout()" href=""><i class="icon-off"></i> Esci</a></li>
                         </ul>
