--- a/client/views/index.html
+++ b/client/views/index.html
@@ -14,6 +14,8 @@
     <link href="/css/bootstrap.icon-large.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
     <link href="/css/normalize.css" rel="stylesheet">
+    <link href="/css/ngDialog.css" rel="stylesheet">
+    <link href="/css/ngDialog-theme-default.css" rel="stylesheet">
 
 </head>
 
@@ -345,6 +347,7 @@
 <!-- Util -->
 <script src="/js/lib/ng-infinite-scroll.min.js"></script>
 <script src="/js/lib/ui-utils.min.js"></script>
+<script src="/js/lib/ngDialog.min.js"></script>
 
 <script>
 
