--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ledita-app">
+<html lang="it" ng-app="ledita-app">
 <head>
     <meta charset="utf-8">
-    <title>LEDITA: Progettazione didattica per l'italiano L2/LS</title>
+    <title>LEDITA: Progettazione didattica per l'italiano L2/LS </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
