--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -352,7 +352,7 @@
                     </div>
                 </a>
                 <div class="toolsEdit">
-                    <a class="editEdit " ng-href="#"><i class="icon-edit icon-white"></i> </a>
+                  <!--  <a class="editEdit " ng-href="#"><i class="icon-edit icon-white"></i> </a> -->
                     <a class="deleteEdit " ng-href="#"><i class="icon-remove icon-white"></i> </a>
                 </div>
             </div>
@@ -392,7 +392,7 @@
             </a>
 
             <div class="toolsEdit">
-                <a class="editEdit" ng-href="#"><i class="icon-edit icon-white"></i> </a>
+                <!-- <a class="editEdit" ng-href="#"><i class="icon-edit icon-white"></i> </a> -->
                 <a class="deleteEdit" ng-click="removeNode(node)"><i class="icon-remove icon-white"></i> </a>
             </div>
 
