--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -995,7 +995,7 @@
 		<p>Are you sure you want to delete {{nodeConfirm.node_name}}?</p>
 	</div>
 	<div class="ngdialog-buttons">
-		<button type="button" class="ngdialog-button ngdialog-button-primary" ng-click="okDeleteNode(nodeConfirm)">OK</button>
+		<button type="button" class="ngdialog-button ngdialog-button-primary" ng-click="okDeleteNode(nodeConfirm)">Sì</button>
 		<button type="button" class="ngdialog-button" ng-click="cancelDeleteNode()">Cancel</button>
 	</div>
 </script>
