Delete activity service with problem

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -991,11 +991,11 @@
 <!-- Reference: https://github.com/likeastore/ngDialog/blob/master/example/index.html -->
 <script type="text/ng-template" id="removeNodeConfirm">
 	<div class="ngdialog-message">
-		<h3>Remove Node</h3>
-		<p>Are you sure you want to delete {{nodeConfirm.node_name}}?</p>
+		<h3>Rimuovi attività</h3>
+		<p>Sei sicuro di voler rimuovere {{nodeConfirm.node_name}}?</p>
 	</div>
 	<div class="ngdialog-buttons">
 		<button type="button" class="ngdialog-button ngdialog-button-primary" ng-click="okDeleteNode(nodeConfirm)">Sì</button>
-		<button type="button" class="ngdialog-button" ng-click="cancelDeleteNode()">Cancel</button>
+		<button type="button" class="ngdialog-button" ng-click="cancelDeleteNode()">No</button>
 	</div>
 </script>
